[workspace]
members = [
    "components/equihash",
    "components/f4jumble",
    "components/zcash_address",
    "components/zcash_encoding",
    "components/zcash_note_encryption",
    "ironfish-primitives",
    "ironfish-proofs",
]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[patch.crates-io]
zcash_encoding = { path = "components/zcash_encoding" }
zcash_note_encryption = { path = "components/zcash_note_encryption" }
